force-app/main/default/objects/Cloudrop__MassMailer_Suppression__c/Cloudrop__MassMailer_Suppression__c.object-meta.xml
<CustomObject>
    <description>This object holds the suppression emails that have bounced, unsubscribed, spam reported.</description>
    <label>MassMailer Suppression</label>
    <nameField>
        <displayFormat>MS-{0000000}</displayFormat>
        <label>MassMailer Suppression Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MassMailer Suppressions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>