force-app/main/default/objects/Cloudrop__MassMailer_Suppression__c/fields/Cloudrop__Account__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MassMailer Suppressions</relationshipLabel>
    <relationshipName>MassMailer_Suppression_List</relationshipName>
    <type>Lookup</type>
</CustomField>