force-app/main/default/objects/Cloudrop__MassMailer_Suppression__c/fields/Cloudrop__Contact__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MassMailer Suppressions</relationshipLabel>
    <relationshipName>MassMailer_Suppressions</relationshipName>
    <type>Lookup</type>
</CustomField>