force-app/main/default/objects/Cloudrop__MassMailer_Suppression__c/fields/Cloudrop__Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Event_Time__c</fullName>
    <label>Event Time</label>
    <type>DateTime</type>
</CustomField>