force-app/main/default/objects/Cloudrop__MassMailer_Suppression__c/fields/Cloudrop__Lead__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>MassMailer Suppressions</relationshipLabel>
    <relationshipName>MassMailer_Suppressions</relationshipName>
    <type>Lookup</type>
</CustomField>