force-app/main/default/objects/Cloudrop__MassMailer_Suppression__c/fields/Cloudrop__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>MassMailer_Suppressions</relationshipName>
    <type>Lookup</type>
</CustomField>