force-app/main/default/objects/Cloudrop__MassMailer_Suppression__c/fields/Cloudrop__Suppression_Type__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Suppression_Type__c</fullName>
    <label>Suppression Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>