force-app/main/default/objects/Cloudrop__MassMailer_Suppression__c/fields/Cloudrop__Unsubscribe_Group__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Unsubscribe_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unsubscribe Group</label>
    <referenceTo>Cloudrop__Unsubscribe_Group__c</referenceTo>
    <relationshipLabel>MassMailer Suppressions</relationshipLabel>
    <relationshipName>MassMailer_Suppression</relationshipName>
    <type>Lookup</type>
</CustomField>