force-app/main/default/objects/Cloudrop__MassMailer_Suppression__c/fields/Cloudrop__User__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MassMailer_Suppression_List</relationshipName>
    <type>Lookup</type>
</CustomField>